# leesah-game-starter-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
leesah/: __init__.py  kafka_config.py  models.py  quiz_rapid.py
leesah-game-client/: __main__.py  config.py  consumer.py  main.py  producer.py  schemas.py  utils.py
leesah-game-client/client_lib/: config.py  consumer.py  kafka.py  logger.py  producer.py  quiz_rapid.py  schemas.py
